--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,10 @@
 <app-banner></app-banner>
 <div class="container_about_title">
     <app-about></app-about>
-    <h1 class="title_gallery">GALERIA</h1>
-    <p class="description_gallery">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi</p>
+    <div class="container">
+        <h1 class="title_gallery">GALERIA</h1>
+        <p class="description_gallery">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+            doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi</p>
+    </div>
 </div>
+<app-gallery-images></app-gallery-images>
