--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,25 +3,91 @@
 .container_about_title {
     background: linear-gradient($color_4,#000000);
 
-    .title_gallery {
-        text-align: center;
-        color: $color_1;
-        font-family: $font_2;
-        font-size: 23px;
-        padding-bottom: 5px;
-        border-bottom: 3px solid $color_1;
-        width: fit-content;
+    .container {
+        width: 90%;
         margin: auto;
-        padding-top: 60px;
-    }
-
-    .description_gallery {
-        text-align: center;
-        font-family: $font_2;
-        line-height: 20px;
-        padding: 0px 6%;
-        margin-top: 15px;
-        font-size: 12px;
-        color: $color_1;
+        
+        .title_gallery {
+            text-align: center;
+            color: $color_1;
+            font-family: $font_2;
+            font-size: 23px;
+            padding-bottom: 5px;
+            border-bottom: 3px solid $color_1;
+            width: fit-content;
+            margin: auto;
+            padding-top: 60px;
+        }
+    
+        .description_gallery {
+            text-align: center;
+            font-family: $font_2;
+            line-height: 20px;
+            margin: 15px auto 0px auto;
+            font-size: 12px;
+            color: $color_1;
+        }
     }
 }
+
+@media(min-width: 540px) {
+    .container_about_title {
+        .container {
+            width: 85%;
+
+            .description_gallery {
+                max-width: 545px;
+            }
+        }
+    }
+}
+
+@media(min-width: 950px) {
+    .container_about_title {
+        .container {
+            .title_gallery {
+                font-size: 30px;
+            }
+
+            .description_gallery {
+                max-width: 800px;
+            }
+        }
+    }
+}
+
+@media(min-width: 1100px) {
+    .container_about_title {
+        .container {
+
+            .description_gallery {
+                font-size: 15px;
+                line-height: 25px;
+                max-width: 850px;
+            }
+        }
+    }
+}
+
+@media(min-width: 1400px) {
+    .container_about_title {
+        .container {
+            width: 75%;
+            max-width: 1200px;
+            .title_gallery {
+                font-size: 40px;
+            }
+        }
+    }
+} 
+
+@media(min-width: 1600px) {
+    .container_about_title {
+        .container {
+
+            .title_gallery {
+                font-size: 50px;
+            }
+        }
+    }
+} 
