Added gallery photos and theris respective styles for all screens

--- a/src/app/home/components/gallery-images/gallery-images.component.html
+++ b/src/app/home/components/gallery-images/gallery-images.component.html
@@ -1,1 +1,29 @@
-<p>gallery-images works!</p>
+<div class="gallery_images_c_h_c">
+    <div class="image_container main">
+        <img src="assets/images/foto-5.jpg" alt="">
+    </div>
+
+    <div class="image_container">
+        <img src="assets/images/foto-1.jpg" alt="">
+    </div>
+
+    <div class="image_container">
+        <img src="assets/images/foto-2.jpg" alt="">
+    </div>
+
+    <div class="image_container">
+        <img src="assets/images/foto-3.jpg" alt="">
+    </div>
+
+    <div class="image_container">
+        <img src="assets/images/foto-4.jpg" alt="">
+    </div>
+
+    <div class="image_container">
+        <img src="assets/images/foto-6.jpg" alt="">
+    </div>
+
+    <div class="image_container">
+        <img src="assets/images/foto-7.jpg" alt="">
+    </div>
+</div>
