--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,6 +2,7 @@
 
 .container_about_title {
     background: linear-gradient($color_4,#000000);
+    padding-bottom: 20px;
 
     .container {
         width: 90%;
@@ -26,6 +27,7 @@
             margin: 15px auto 0px auto;
             font-size: 12px;
             color: $color_1;
+            
         }
     }
 }
@@ -39,6 +41,12 @@
                 max-width: 545px;
             }
         }
+    }
+}
+
+@media(min-width: 768px) {
+    .container_about_title {
+        padding-bottom: 40px;
     }
 }
 
