Added hover effect to gallery images

--- a/src/app/home/components/gallery-images/gallery-images.component.html
+++ b/src/app/home/components/gallery-images/gallery-images.component.html
@@ -1,29 +1,57 @@
 <div class="gallery_images_c_h_c">
     <div class="image_container main">
         <img src="assets/images/foto-5.jpg" alt="">
+        <div class="img_hover_text">
+            <img src="assets/icons/plus.svg" alt="">
+            <span>ABRIR</span>
+        </div>
     </div>
 
     <div class="image_container">
         <img src="assets/images/foto-1.jpg" alt="">
+        <div class="img_hover_text">
+            <img src="assets/icons/plus.svg" alt="">
+            <span>ABRIR</span>
+        </div>
     </div>
 
     <div class="image_container">
         <img src="assets/images/foto-2.jpg" alt="">
+        <div class="img_hover_text">
+            <img src="assets/icons/plus.svg" alt="">
+            <span>ABRIR</span>
+        </div>
     </div>
 
     <div class="image_container">
         <img src="assets/images/foto-3.jpg" alt="">
+        <div class="img_hover_text">
+            <img src="assets/icons/plus.svg" alt="">
+            <span>ABRIR</span>
+        </div>
     </div>
 
     <div class="image_container">
         <img src="assets/images/foto-4.jpg" alt="">
+        <div class="img_hover_text">
+            <img src="assets/icons/plus.svg" alt="">
+            <span>ABRIR</span>
+        </div>
     </div>
 
     <div class="image_container">
         <img src="assets/images/foto-6.jpg" alt="">
+        <div class="img_hover_text">
+            <img src="assets/icons/plus.svg" alt="">
+            <span>ABRIR</span>
+        </div>
     </div>
 
     <div class="image_container">
         <img src="assets/images/foto-7.jpg" alt="">
+        <div class="img_hover_text">
+            <img src="assets/icons/plus.svg" alt="">
+            <span>ABRIR</span>
+        </div>
     </div>
 </div>
