--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-banner></app-banner>
-<div class="container_about_title">
+<div class="container_about_and_gallery_title">
     <app-about></app-about>
     <div class="container">
         <h1 class="title_gallery">GALERIA</h1>
