Added products section with responsive styles for all screens

--- a/src/app/home/components/gallery-images/gallery-images.component.scss
+++ b/src/app/home/components/gallery-images/gallery-images.component.scss
@@ -10,6 +10,7 @@ $height_single_images: 160px;
     .image_container {
         height: $height_single_images;
         position: relative;
+        overflow: hidden;
 
         img {
             object-fit: cover;
