--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,3 +8,6 @@
     </div>
 </div>
 <app-gallery-images></app-gallery-images>
+<div class="container_products_contact">
+    <app-products></app-products>
+</div>
