Added contact section with responsive styles and google map

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,4 +10,5 @@
 <app-gallery-images></app-gallery-images>
 <div class="container_products_contact">
     <app-products></app-products>
+    <app-contact></app-contact>
 </div>
