--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,22 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
+
+iframe {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+}
+
+.fadeIn {
+    animation: fadeIn .3s ease forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
