--- a/src/app/home/components/gallery-images/gallery-images.component.scss
+++ b/src/app/home/components/gallery-images/gallery-images.component.scss
@@ -58,6 +58,7 @@ $height_single_images: 160px;
 
     .image_container.main {
         grid-column: 1 / 3;
+        grid-row: 1 / 2;
         height: 100%;
         max-height: $height_main_image;
 
