Added modal responsive styles for products section and anddes clicks events to banner links with their respective code to set the animation to indicate the current section

--- a/src/app/home/components/about/about.component.html
+++ b/src/app/home/components/about/about.component.html
@@ -9,6 +9,6 @@
             <img src="assets/images/image_about.jpg" alt="">
         </div>
 
-        <button class="button_about">Contactanos</button>
+        <button class="button_about" (click)="scrollTo()">Contactanos</button>
     </div>
 </div>
