--- a/src/app/home/components/products/products.component.html
+++ b/src/app/home/components/products/products.component.html
@@ -4,75 +4,15 @@
         doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi</p>
 
     <div class="container_boxes">
-        <div class="box">
-            <div class="img_container"><img src="assets/images/foto-1.jpg" alt=""></div>
+        <div class="box" *ngFor="let product of products">
+            <div class="img_container"><img [src]="product.image" alt=""></div>
             <div class="text_box">
                 <h2 class="title_box">TORTA DE CHOCOLATE</h2>
                 <div class="prices_box">
                     <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 30.00</span></p>
                     <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 20.00</span></p>
                 </div>
-                <button class="btn_box">Detalles</button>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="img_container"><img src="assets/images/foto-2.jpg" alt=""></div>
-            <div class="text_box">
-                <h2 class="title_box">TORTA DE CHOCOLATE</h2>
-                <div class="prices_box">
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 30.00</span></p>
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 20.00</span></p>
-                </div>
-                <button class="btn_box">Detalles</button>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="img_container"><img src="assets/images/foto-3.jpg" alt=""></div>
-            <div class="text_box">
-                <h2 class="title_box">TORTA DE CHOCOLATE</h2>
-                <div class="prices_box">
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 30.00</span></p>
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 20.00</span></p>
-                </div>
-                <button class="btn_box">Detalles</button>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="img_container"><img src="assets/images/foto-4.jpg" alt=""></div>
-            <div class="text_box">
-                <h2 class="title_box">TORTA DE CHOCOLATE</h2>
-                <div class="prices_box">
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 30.00</span></p>
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 20.00</span></p>
-                </div>
-                <button class="btn_box">Detalles</button>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="img_container"><img src="assets/images/foto-5.jpg" alt=""></div>
-            <div class="text_box">
-                <h2 class="title_box">TORTA DE CHOCOLATE</h2>
-                <div class="prices_box">
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 30.00</span></p>
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 20.00</span></p>
-                </div>
-                <button class="btn_box">Detalles</button>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="img_container"><img src="assets/images/foto-6.jpg" alt=""></div>
-            <div class="text_box">
-                <h2 class="title_box">TORTA DE CHOCOLATE</h2>
-                <div class="prices_box">
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 30.00</span></p>
-                    <p><span>Por Mayor</span> <span>=</span> <span class="number">S/. 20.00</span></p>
-                </div>
-                <button class="btn_box">Detalles</button>
+                <button class="btn_box" (click)="openModal(product)">Detalles</button>
             </div>
         </div>
     </div>
