--- a/src/app/home/components/banner/banner.component.html
+++ b/src/app/home/components/banner/banner.component.html
@@ -1,34 +1,32 @@
 <div class="banner_c_h_c" #banner_c_h_c>
-    <header class="header">
-        <div class="container">
-            <div class="logo_c">
-                <img src="assets/icons/logo-dark.svg">
-            </div>
-    
-            <button class="btn_menu" #btn_menu (click)="openNav(nav,btn_menu)">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <rect width="18" height="2" x="3" y="11" rx=".95" ry=".95" />
-                    <rect width="18" height="2" x="3" y="16" rx=".95" ry=".95" />
-                    <rect width="18" height="2" x="3" y="6" rx=".95" ry=".95" />
-                </svg>
-            </button>
-    
-            <nav class="nav" #nav>
-                <ul class="menu">
-                    <li class="menu_item">Inicio</li>
-                    <li class="menu_item">Acerca de</li>
-                    <li class="menu_item">Galeria</li>
-                    <li class="menu_item">Productos</li>
-                    <li class="menu_item">Contacto</li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <header class="header">
+    <div class="container">
+      <div class="logo_c">
+        <img src="assets/icons/logo-dark.svg" />
+      </div>
 
-    <div class="banner_content">
-        <h2 class="title_banner">Marlet</h2>
-        <h3 class="subtitle_banner">PANADERIA Y SALTEÑERIA</h3>
+      <button class="btn_menu" #btn_menu (click)="openNav(nav, btn_menu)">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <rect width="18" height="2" x="3" y="11" rx=".95" ry=".95" />
+          <rect width="18" height="2" x="3" y="16" rx=".95" ry=".95" />
+          <rect width="18" height="2" x="3" y="6" rx=".95" ry=".95" />
+        </svg>
+      </button>
+
+      <nav class="nav" #nav>
+        <ul class="menu">
+          <li class="menu_item" (click)="scrollTo('.banner_c_h_c')">Inicio</li>
+          <li class="menu_item" (click)="scrollTo('.about_c_h_c')">Acerca de</li>
+          <li class="menu_item" (click)="scrollTo('.container_gallery_first_section')">Galeria</li>
+          <li class="menu_item" (click)="scrollTo('.products_c_h_c')">Productos</li>
+          <li class="menu_item" (click)="scrollTo('.contact_c_h_c')">Contacto</li>
+        </ul>
+      </nav>
     </div>
+  </header>
 
-
+  <div class="banner_content">
+    <h2 class="title_banner">Marlet</h2>
+    <h3 class="subtitle_banner">PANADERIA Y SALTEÑERIA</h3>
+  </div>
 </div>
