--- a/src/app/home/components/products/products.component.scss
+++ b/src/app/home/components/products/products.component.scss
@@ -25,7 +25,7 @@
 
   .container_boxes {
     width: 67%;
-    
+
     margin: 35px auto 0px auto;
     display: grid;
     justify-content: center;
@@ -94,11 +94,11 @@
           margin: auto;
           font-family: $font_2;
           box-shadow: 0px 5px 5px 0px rgba($color: $color_3, $alpha: 0.5);
-          transition: color .3s ease, background-color .3s ease;
+          transition: color 0.3s ease, background-color 0.3s ease;
 
           &:hover {
-              background-color: $color_1;
-              color: $color_3;
+            background-color: $color_1;
+            color: $color_3;
           }
         }
       }
@@ -106,168 +106,167 @@
   }
 }
 
-@media (min-width:700px) {
-    .products_c_h_c {
+@media (min-width: 700px) {
+  .products_c_h_c {
+    .description_products {
+      width: 82%;
+    }
+    .container_boxes {
+      grid-template-columns: 1fr 1fr;
+      width: 75%;
+      gap: 30px 50px;
+      margin: 40px auto 0px auto;
 
-        .description_products {
-            width: 82%;
-        }
-        .container_boxes {
-            grid-template-columns: 1fr 1fr;
-            width: 75%;
-            gap: 30px 50px;
-            margin: 40px auto 0px auto;
+      .box {
+        justify-self: center;
+        max-width: unset;
+        width: 245px;
 
-            .box {
-                justify-self: center;
-                max-width: unset;
-                width: 245px;
+        .text_box {
+          gap: 20px;
 
-                .text_box {
-                    gap: 20px;
-
-                    .prices_box {
-                        p {
-                            span {
-                                &:nth-child(3) {
-                                    font-size: 15px;
-                                }
-                            }
-                        }
-                    }
-                    .btn_box  {
-                        font-size: 15px;
-                    }
+          .prices_box {
+            p {
+              span {
+                &:nth-child(3) {
+                  font-size: 15px;
                 }
+              }
             }
-        }
-    }
-}
-
-@media (min-width:850px) {
-    .products_c_h_c {
-        .container_boxes {
-            width: 70%;
-        }
-    }
-}
-
-@media (min-width:950px) {
-    .products_c_h_c {
-        .title_products {
-            font-size: 30px;
-        }
-
-        .description_products {
-            max-width: 845px;
-        }
-    }
-}
-
-@media (min-width:1050px) {
-    .products_c_h_c {
-        .container_boxes {
-            width: 82%;
-            gap: 30px;
-            max-width: 950px;
-
-            .box {
-                padding: 42px 25px;
-                grid-template-columns: 1fr 1fr 1fr;
-                width: unset;
-                gap: 15px;
-
-                .img_container {
-                    align-self: center;
-                    width: 150px;
-                    height: 150px;
-                }
-
-                .text_box {
-                    gap: 27px;
-                    grid-column: 2 / 4;
-                    gap: 15px;
-
-                    .title_box {
-                        font-size: 18px;
-                    }
-
-                    .prices_box {
-                        p {
-                            span {
-                                font-size: 15px;
-                            }
-                        }
-                    }
-
-                    .btn_box {
-                        margin: 0;
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media (min-width:1100px) {
-    .products_c_h_c {
-        .description_products {
+          }
+          .btn_box {
             font-size: 15px;
+          }
         }
+      }
     }
+  }
 }
 
-@media (min-width:1400px) {
-    .products_c_h_c {
-        .title_products {
-            font-size: 40px;
+@media (min-width: 850px) {
+  .products_c_h_c {
+    .container_boxes {
+      width: 70%;
+    }
+  }
+}
+
+@media (min-width: 950px) {
+  .products_c_h_c {
+    .title_products {
+      font-size: 30px;
+    }
+
+    .description_products {
+      max-width: 845px;
+    }
+  }
+}
+
+@media (min-width: 1050px) {
+  .products_c_h_c {
+    .container_boxes {
+      width: 82%;
+      gap: 30px;
+      max-width: 950px;
+
+      .box {
+        padding: 42px 25px;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: unset;
+        gap: 15px;
+
+        .img_container {
+          align-self: center;
+          width: 150px;
+          height: 150px;
         }
 
-        .description_products {
-            line-height: 25px;
-            margin-top: 30px;
-        }
+        .text_box {
+          gap: 27px;
+          grid-column: 2 / 4;
+          gap: 15px;
 
-        .container_boxes {
-            margin-top: 70px;
-            max-width: 1200px;
-            gap: 50px 80px;
+          .title_box {
+            font-size: 18px;
+          }
 
-            .box {
-                padding: 43px 35px;
-                .img_container {
-                    width: 180px;
-                    height: 180px;
-                }
-                .text_box {
-                    .title_box {
-                        font-size: 22px;
-                    }
-
-                    .prices_box {
-                        p {
-                            span {
-                                &:nth-child(3) {
-                                    font-size: 20px;
-                                }
-                            }
-                        }
-                    }
-
-                    .btn_box {
-                        height: 45px;
-                        font-size: 17px;
-                    }
-                }
+          .prices_box {
+            p {
+              span {
+                font-size: 15px;
+              }
             }
+          }
+
+          .btn_box {
+            margin: 0;
+          }
         }
+      }
     }
+  }
 }
 
-@media (min-width:1600px) {
-    .products_c_h_c {
-        .title_products {
-            font-size: 50px;
-        }
+@media (min-width: 1100px) {
+  .products_c_h_c {
+    .description_products {
+      font-size: 15px;
     }
+  }
+}
+
+@media (min-width: 1400px) {
+  .products_c_h_c {
+    .title_products {
+      font-size: 40px;
+    }
+
+    .description_products {
+      line-height: 25px;
+      margin-top: 30px;
+    }
+
+    .container_boxes {
+      margin-top: 70px;
+      max-width: 1200px;
+      gap: 50px 80px;
+
+      .box {
+        padding: 43px 35px;
+        .img_container {
+          width: 180px;
+          height: 180px;
+        }
+        .text_box {
+          .title_box {
+            font-size: 22px;
+          }
+
+          .prices_box {
+            p {
+              span {
+                &:nth-child(3) {
+                  font-size: 20px;
+                }
+              }
+            }
+          }
+
+          .btn_box {
+            height: 45px;
+            font-size: 17px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1600px) {
+  .products_c_h_c {
+    .title_products {
+      font-size: 50px;
+    }
+  }
 }
