--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <app-banner></app-banner>
 <div class="container_about_and_gallery_title">
     <app-about></app-about>
-    <div class="container">
+    <div class="container_gallery_first_section">
         <h1 class="title_gallery">GALERIA</h1>
         <p class="description_gallery">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
             doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi</p>
@@ -9,7 +9,8 @@
 </div>
 <app-gallery-images (onOpenGallery)="openGallery($event)"></app-gallery-images>
 <div class="container_products_contact">
-    <app-products></app-products>
+    <app-products (onOpenModal)="openModal($event)"></app-products>
     <app-contact></app-contact>
 </div>
 <app-gallery-slider [data]="data"></app-gallery-slider>
+<app-modal-products [product]="product"></app-modal-products>
